@@ -29,7 +29,7 @@ libudev = "0.2.0"
 regex = "1.0"
 
 [target."cfg(windows)".dependencies.winapi]
-version = "0.3"
+git = "https://github.com/munckymagik/winapi-rs.git"
 features = ["cguid", "commapi", "errhandlingapi", "fileapi", "guiddef", "handleapi", "minwinbase",
             "minwindef", "ntdef", "setupapi", "winbase", "winerror", "winnt"]
 
