@@ -410,6 +410,42 @@ impl SerialPort for COMPort {
         self.set_dcb(&dcb)
     }
 
+    fn bytes_to_read(&self) -> ::Result<u32> {
+        let mut errors: DWORD = 0;
+        let mut comstat: COMSTAT = unsafe { mem::uninitialized() };
+
+        if unsafe { ClearCommError(self.handle, &mut errors, &mut comstat) != 0 } {
+            Ok(comstat.cbInQue)
+        } else {
+            Err(super::error::last_os_error())
+        }
+    }
+
+    fn bytes_to_write(&self) -> ::Result<u32> {
+        let mut errors: DWORD = 0;
+        let mut comstat: COMSTAT = unsafe { mem::uninitialized() };
+
+        if unsafe { ClearCommError(self.handle, &mut errors, &mut comstat) != 0 } {
+            Ok(comstat.cbOutQue)
+        } else {
+            Err(super::error::last_os_error())
+        }
+    }
+
+    fn clear(&self, buffer_to_clear: ::ClearBuffer) -> ::Result<()> {
+        let buffer_flags = match buffer_to_clear {
+            ::ClearBuffer::Input => PURGE_RXABORT | PURGE_RXCLEAR,
+            ::ClearBuffer::Output => PURGE_TXABORT | PURGE_TXCLEAR,
+            ::ClearBuffer::All => PURGE_RXABORT | PURGE_RXCLEAR | PURGE_TXABORT | PURGE_TXCLEAR,
+        };
+
+        if unsafe { PurgeComm(self.handle, buffer_flags) != 0 } {
+            Ok(())
+        } else {
+            Err(super::error::last_os_error())
+        }
+    }
+
     fn try_clone(&self) -> ::Result<Box<SerialPort>> {
         let process_handle: HANDLE = unsafe { GetCurrentProcess() };
         let mut cloned_handle: HANDLE;
